--- a/index.html
+++ b/index.html
@@ -119,28 +119,28 @@
                             <ul class="social_list">
                                 <li class="team_social_link">
                                     <a href="" class="social_link">
-                                        <svg class="team_social_icon">
+                                        <svg class="team_social_icon" width="16" height="16">
                                             <use href="./images/symbol-defs.svg#icon-team_cards1"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team_social_link">
                                     <a href="" class="social_link">
-                                        <svg class="team_social_icon">
+                                        <svg class="team_social_icon" width="16" height="16">
                                             <use href="./images/symbol-defs.svg#icon-team_cards2"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team_social_link">
                                     <a href="" class="social_link">
-                                        <svg class="team_social_icon">
+                                        <svg class="team_social_icon" width="16" height="16">
                                             <use href="./images/symbol-defs.svg#icon-team_cards3"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team_social_link">
                                     <a href="" class="social_link">
-                                        <svg class="team_social_icon">
+                                        <svg class="team_social_icon" width="16" height="16">
                                             <use href="./images/symbol-defs.svg#icon-team_cards4"></use>
                                         </svg>
                                     </a>
@@ -156,28 +156,28 @@
                             <ul class="social_list">
                                 <li class="team_social_link">
                                     <a href="" class="social_link">
-                                        <svg class="team_social_icon">
+                                        <svg class="team_social_icon" width="16" height="16">
                                             <use href="./images/symbol-defs.svg#icon-team_cards1"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team_social_link">
                                     <a href="" class="social_link">
-                                        <svg class="team_social_icon">
+                                        <svg class="team_social_icon" width="16" height="16">
                                             <use href="./images/symbol-defs.svg#icon-team_cards2"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team_social_link">
                                     <a href="" class="social_link">
-                                        <svg class="team_social_icon">
+                                        <svg class="team_social_icon" width="16" height="16">
                                             <use href="./images/symbol-defs.svg#icon-team_cards3"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team_social_link">
                                     <a href="" class="social_link">
-                                        <svg class="team_social_icon">
+                                        <svg class="team_social_icon" width="16" height="16">
                                             <use href="./images/symbol-defs.svg#icon-team_cards4"></use>
                                         </svg>
                                     </a>
@@ -193,28 +193,28 @@
                             <ul class="social_list">
                                 <li class="team_social_link">
                                     <a href="" class="social_link">
-                                        <svg class="team_social_icon">
+                                        <svg class="team_social_icon" width="16" height="16">
                                             <use href="./images/symbol-defs.svg#icon-team_cards1"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team_social_link">
                                     <a href="" class="social_link">
-                                        <svg class="team_social_icon">
+                                        <svg class="team_social_icon" width="16" height="16">
                                             <use href="./images/symbol-defs.svg#icon-team_cards2"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team_social_link">
                                     <a href="" class="social_link">
-                                        <svg class="team_social_icon">
+                                        <svg class="team_social_icon" width="16" height="16">
                                             <use href="./images/symbol-defs.svg#icon-team_cards3"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team_social_link">
                                     <a href="" class="social_link">
-                                        <svg class="team_social_icon">
+                                        <svg class="team_social_icon" width="16" height="16">
                                             <use href="./images/symbol-defs.svg#icon-team_cards4"></use>
                                         </svg>
                                     </a>
@@ -230,28 +230,28 @@
                             <ul class="social_list">
                                 <li class="team_social_link">
                                     <a href="" class="social_link">
-                                        <svg class="team_social_icon">
+                                        <svg class="team_social_icon" width="16" height="16">
                                             <use href="./images/symbol-defs.svg#icon-team_cards1"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team_social_link">
                                     <a href="" class="social_link">
-                                        <svg class="team_social_icon">
+                                        <svg class="team_social_icon" width="16" height="16">
                                             <use href="./images/symbol-defs.svg#icon-team_cards2"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team_social_link">
                                     <a href="" class="social_link">
-                                        <svg class="team_social_icon">
+                                        <svg class="team_social_icon" width="16" height="16">
                                             <use href="./images/symbol-defs.svg#icon-team_cards3"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="team_social_link">
                                     <a href="" class="social_link">
-                                        <svg class="team_social_icon">
+                                        <svg class="team_social_icon" width="16" height="16">
                                             <use href="./images/symbol-defs.svg#icon-team_cards4"></use>
                                         </svg>
                                     </a>
