--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </section>
         <section class="features">
             <div class="container">
-                <h2 class="visually-hidden">features</h2>
+                <h2 class="visually_hidden">features</h2>
                 <ul class="features_list">
                     <li class="features_item">
                         <div class="features_item_icon">
@@ -352,6 +352,23 @@
                     </li>
                 </ul>
             </div>
+            <div class="subscribe">
+                <p class="footer_p">Subscribe</p>
+                <form class="subscribe_form">
+                    <input
+                    type="email"
+                    name="email"
+                    placeholder="E-mail"
+                    class="email"
+                    />
+                    <button type="submit" class="subscribe_button button">
+                        <span class="subscribe_span">Subscribe</span>
+                        <svg width="24" height="20">
+                            <use href="./images/symbol-defs.svg#icon-send-footer"></use>
+                        </svg>
+                    </button>
+                </form>
+            </div>
         </div>
     </footer>
     <div class="backdrop is-hidden" data-modal>
@@ -361,6 +378,75 @@
                     <use href="./images/symbol-defs.svg#icon-modal_close"></use>
                 </svg>
             </button>
+            <p>Leave your contacts and we will call you back</p>
+            <form class="modal_form">
+                <label class="modal_form_field">
+                    <span class="modal_form_input_desc">Name</span>
+                    <span class="modal_form_input_wrapper">
+                        <input
+                            type="text"
+                            name="user_name"
+                            class="modal_form_input"
+                            required
+                            pattern="^[a-zA-Zа-яА-Я]+"
+                            minlength="2"
+                        />
+                        <span class="modal_form_input_icon">
+                             <svg width="18" height="24">
+                                <use href="./images/symbol-defs.svg#icon-person-modal"></use>
+                            </svg>
+                        </span>
+                    </span>
+                </label>
+                <label class="modal_form_field">
+                    <span class="modal_form_input_desc">Phone</span>
+                    <span class="modal_form_input_wrapper">
+                        <input
+                            type="tel"
+                            name="user-phone"
+                            class="modal_form_input"
+                            required
+                            pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
+                            title="xxx-xxx-xx-xx"
+                        />
+                        <span class="modal_form_input_icon">
+                            <svg width="18" height="24">
+                                <use href="./images/symbol-defs.svg#icon-phone-modal"></use>
+                            </svg>
+                        </span>
+                    </span>
+                </label>
+                <label class="modal_form_field">
+                    <span class="modal_form_input_desc">Email</span>
+                    <span class="modal_form_input_wrapper">
+                        <input type="email" name="user_email" class="modal_form_input" />
+                        <span class="modal_form_input_icon">
+                            <svg width="18" height="24">
+                                <use href="./images/symbol-defs.svg#icon-email-modal"></use>
+                            </svg>
+                        </span>
+                    </span>
+                </label>
+                <label class="modal_form_field">
+                    <span class="modal_form_input_desc">Comment</span>
+                    <textarea
+                    name="user_message"
+                    class="modal_form_message"
+                    placeholder="Text input"
+                    ></textarea>
+                </label>
+                <input
+                    id="user-policy"
+                    type="checkbox"
+                    name="user_policy"
+                    class="visually_hidden modal_form_check"
+                />
+                <label for="user-policy" class="modal_form_check_desc"
+                    >I accept the terms and conditions of the&nbsp;
+                    <a href="">Privacy Policy</a>
+                </label>
+                <button type="submit" class="modal_form_submit">Send</button>
+            </form>
         </div>
     </div>
     <script src="./js/modal.js"></script>
