--- a/portfolio.html
+++ b/portfolio.html
@@ -39,7 +39,7 @@
     <main>
         <section class="portfolio">
             <div class="container">
-                <h1 class="visually-hidden">Portfolio</h1>
+                <h1 class="visually_hidden">Portfolio</h1>
                 <ul class="btn_list">
                     <li class="btn_item">
                         <button type="button" class="buttons">All</button>
@@ -291,6 +291,23 @@
                         </a>
                     </li>
                 </ul>
+            </div>
+            <div class="subscribe">
+                <p class="footer_p">Subscribe</p>
+                <form class="subscribe_form">
+                    <input
+                    type="email"
+                    name="email"
+                    placeholder="E-mail"
+                    class="email"
+                    />
+                    <button type="submit" class="subscribe_button button">
+                        <span class="subscribe_span">Subscribe</span>
+                        <svg width="24" height="20">
+                            <use href="./images/symbol-defs.svg#icon-send-footer"></use>
+                        </svg>
+                    </button>
+                </form>
             </div>
         </div>
     </footer>
